--- a/404.md
+++ b/404.md
@@ -3,10 +3,10 @@ permalink: /404.html
 ---
 > **Note:** You accessed a link that returned a 404, probably by clicking one of the plugin links. You're supposed to copy the link address and add it into Vendetta.
 
-[![Nitro Themes Revanced](images/logo.png)](https://github.com/DodoLeDev/NitroThemes-Revanced)
+[![Nitro Themes Revanced](https://github.com/DodoLeDev/NitroThemes-Revanced/tree/main/images/logo.png)](https://github.com/DodoLeDev/NitroThemes-Revanced)
 
 # Available themes
-<a href="https://github.com/DodoLeDev/NitroThemes-Revanced/tree/main/plugins/ChromaGlow"><img src="images/chroma_glow.png" width=300></img></a>
+<a href="https://github.com/DodoLeDev/NitroThemes-Revanced/tree/main/plugins/ChromaGlow"><img src="https://github.com/DodoLeDev/NitroThemes-Revanced/tree/main/images/chroma_glow.png" width=300></img></a>
 
 ## Credits
 - Thanks to the [Vendetta Team](https://github.com/vendetta-mod) for their incredible application!
